--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="your_web_client_id">106390670965-qv8h23k878ll8jn79uv4n5v6optbm2fd.apps.googleusercontent.com</string>
     <string name="personality">Personality</string>
     <string name="any_other_topic">Any Other Topic</string>
+    <string name="input_your_questions">Input your questions</string>
 </resources>
