--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="personality">Personality</string>
     <string name="any_other_topic">Any Other Topic</string>
     <string name="input_your_questions">Input your questions</string>
+    <string name="click_below_to_search_for_buddy_to_play">Click below to search for buddy to play</string>
 </resources>
