--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,13 @@
     <string name="fun_express">Fun Express</string>
     <string name="your_web_client_id">106390670965-qv8h23k878ll8jn79uv4n5v6optbm2fd.apps.googleusercontent.com</string>
     <string name="personality">Personality</string>
+    <string name="goalsetting">Goal Setting and Planning</string>
+    <string name="interviewskill">Interviewing Skill Set</string>
+
+    <string name="selfconfidence">Self Confidence</string>
+
+    <string name="stress_management">Stress Management</string>
+
     <string name="any_other_topic">Any Other Topic</string>
     <string name="input_your_questions">Input your questions</string>
     <string name="click_below_to_search_for_buddy_to_play">Click below to search for buddy to play</string>
