--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Hackathon</string>
+    <string name="app_name">m-Learn</string>
     <string name="learning_express">Learning Express</string>
     <string name="fun_express">Fun Express</string>
     <string name="your_web_client_id">106390670965-qv8h23k878ll8jn79uv4n5v6optbm2fd.apps.googleusercontent.com</string>
