--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,8 @@
     <string name="your_web_client_id">106390670965-qv8h23k878ll8jn79uv4n5v6optbm2fd.apps.googleusercontent.com</string>
     <string name="personality">Personality</string>
     <string name="any_other_topic">Any Other Topic</string>
-    <string name="input_your_questions">Input your questions</string>
+    <string name="input_your_questions">Input your questions and select a lie</string>
     <string name="click_below_to_search_for_buddy_to_play">Click below to search for buddy to play</string>
-    <string name="catch_a_lie">Catch a Lie</string>
+    <string name="catch_a_lie">Catch the Lie</string>
+    <string name="submit">Submit</string>
 </resources>
